# vespa-sample-app

./: README.md  pyproject.toml
src/: create_vespa_configs.py  format_articles_to_dataframe.py  load_to_vespa.py  search_app.ipynb
